<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ir.pallas.calculator.InputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_number_seven"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_seven" />

        <Button
            android:id="@+id/btn_number_eight"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_eight" />

        <Button
            android:id="@+id/btn_number_nine"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_nine" />

        <Button
            android:id="@+id/btn_operator_divide"
            style="@style/ButtonOperation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_operator_divide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_number_four"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_four" />

        <Button
            android:id="@+id/btn_number_five"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_five" />

        <Button
            android:id="@+id/btn_number_six"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_six" />

        <Button
            android:id="@+id/btn_operator_multiply"
            style="@style/ButtonOperation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_operator_multiply" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_number_one"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_one" />

        <Button
            android:id="@+id/btn_number_two"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_two" />

        <Button
            android:id="@+id/btn_number_three"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_three" />

        <Button
            android:id="@+id/btn_operator_subtract"
            style="@style/ButtonOperation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_operator_subtract" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_number_zero"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_number_zero" />

        <Button
            android:id="@+id/btn_decimal"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_decimal" />

        <Button
            android:id="@+id/btn_evaluate"
            style="@style/ButtonNumberPad"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_evaluate" />

        <Button
            android:id="@+id/btn_operator_add"
            style="@style/ButtonOperation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_operator_add" />

    </LinearLayout>

</RelativeLayout>
